--- a/src/app/claims/claims-details/claims-details.html
+++ b/src/app/claims/claims-details/claims-details.html
@@ -27,12 +27,12 @@
 
         <div class="detail-item">
           <span class="label">Cause Of Death (category):</span>
-          <span class="value">{{ claims.causeOfDeathCategory }}</span>
+          <span class="value">{{ causeOfDeathCategoryLabel }}</span>
         </div>
 
         <div class="detail-item">
           <span class="label">Cause Of Death:</span>
-          <span class="value">{{ claims.causeOfDeath }}</span>
+          <span class="value">{{ causeOfDeathLabel }}</span>
         </div>
 
         <div class="detail-item">
