--- a/src/app/livestock-group/livestock-group-list/livestock-group-list.html
+++ b/src/app/livestock-group/livestock-group-list/livestock-group-list.html
@@ -19,7 +19,7 @@
       color="primary"
       (click)="onUpdate(element._id!)"
       *ngIf="user?.role === 'farmer'"
-      [disabled]="element.status === 'pending' || element.status === 'approved'"
+      [disabled]="element.status === 'pending' || element.status === 'verified'"
     >
       <mat-icon>edit</mat-icon>
     </button>
