--- a/src/app/user-settings/user-settings-update/user-settings-update.html
+++ b/src/app/user-settings/user-settings-update/user-settings-update.html
@@ -7,12 +7,21 @@
         <h2 class="section-title">My Account</h2>
         <p class="section-subtitle">Manage your profile details and preferences.</p>
 
-        <div class="avatar-container">
-          <img [src]="avatarUrl" alt="Profile Picture" class="avatar" />
-          <label class="avatar-upload">
-            <input type="file" (change)="onAvatarChange($event)" accept="image/*" hidden />
-            <button mat-stroked-button color="primary" type="button">Change Photo</button>
-          </label>
+        <div class="profile-picture">
+          <img *ngIf="avatarUrl; else defaultAvatar" [src]="avatarUrl" alt="User Picture" class="avatar-img">
+          <ng-template #defaultAvatar>
+            <div class="default-avatar">
+              {{ (user.firstName.charAt(0) || '') + (user.lastName.charAt(0) || '') }}
+            </div>
+          </ng-template>
+          <!-- <div class="edit-overlay">
+            <mat-icon>edit</mat-icon>
+          </div> -->
+        </div>
+
+        <div class="user-basic-info">
+          <h3 class="user-name">{{ user.firstName }} {{ user.middleName || '' }} {{ user.lastName }}</h3>
+          <p class="user-role">{{ user.role | titlecase }}</p>
         </div>
       </section>
 
@@ -85,7 +94,7 @@
         <div class="form-grid">
           <mat-form-field appearance="outline" class="field">
             <mat-label>Province</mat-label>
-            <input matInput formControlName="province" />
+            <input matInput formControlName="province" readonly />
             <mat-error>
               <app-form-control-errors [control]="profileForm.get('address.province')"></app-form-control-errors>
             </mat-error>
@@ -93,15 +102,25 @@
 
           <mat-form-field appearance="outline" class="field">
             <mat-label>Municipality</mat-label>
-            <input matInput formControlName="municipality" />
-            <mat-error>
-              <app-form-control-errors [control]="profileForm.get('address.municipality')"></app-form-control-errors>
-            </mat-error>
+            <mat-select
+              formControlName="municipality"
+              (selectionChange)="onMunicipalitySelected($event.value)"
+            >
+              <mat-option value="">-- Select Municipality --</mat-option>
+              @for (address of addresses; track address.name) {
+                <mat-option [value]="address.name">{{ address.name }}</mat-option>
+              }
+            </mat-select>
           </mat-form-field>
 
           <mat-form-field appearance="outline" class="field">
             <mat-label>Barangay</mat-label>
-            <input matInput formControlName="barangay" />
+            <mat-select formControlName="barangay">
+              <mat-option value="">-- Select Barangay --</mat-option>
+              @for (barangay of barangays; track barangay.name) {
+                <mat-option [value]="barangay.name">{{ barangay.name }}</mat-option>
+              }
+            </mat-select>
             <mat-error>
               <app-form-control-errors [control]="profileForm.get('address.barangay')"></app-form-control-errors>
             </mat-error>
@@ -123,19 +142,12 @@
             </mat-select>
           </mat-form-field>
 
-          <mat-form-field appearance="outline" class="field">
-            <mat-label>Role</mat-label>
-            <mat-select formControlName="role">
-              <mat-option value="admin">Admin</mat-option>
-              <mat-option value="farmer">Farmer</mat-option>
-              <mat-option value="vet">Veterinarian</mat-option>
-              <mat-option value="technician">Technician</mat-option>
-            </mat-select>
-          </mat-form-field>
-
-          <mat-form-field appearance="outline" class="field">
+          <mat-form-field appearance="outline" class="field"  *ngIf="profileForm.get('rsbsaNumber')">
             <mat-label>RSBSA Number</mat-label>
             <input matInput formControlName="rsbsaNumber" />
+            <mat-error>
+              <app-form-control-errors [control]="profileForm.get('rsbsaNumber')"></app-form-control-errors>
+            </mat-error>
           </mat-form-field>
         </div>
       </section>
@@ -143,12 +155,28 @@
       <mat-divider></mat-divider>
 
       <!-- Buttons -->
-      <div class="button-group">
-        <button mat-raised-button color="primary" type="submit" [disabled]="!profileForm.valid || isLoading">
-          {{ isLoading ? 'Saving...' : 'Save Changes' }}
-        </button>
-        <button mat-stroked-button color="warn" type="button" (click)="cancelEdit()">Cancel</button>
-      </div>
+    <div class="button-group">
+      <button 
+        mat-raised-button 
+        class="save-btn" 
+        color="primary" 
+        type="submit" 
+        [disabled]="!profileForm.valid || isLoading">
+        <mat-icon *ngIf="!isLoading">save</mat-icon>
+        <mat-spinner *ngIf="isLoading" diameter="20"></mat-spinner>
+        <span>{{ isLoading ? 'Saving...' : 'Save Changes' }}</span>
+      </button>
+
+      <button 
+        mat-stroked-button 
+        class="cancel-btn" 
+        color="warn" 
+        type="button" 
+        (click)="cancelEdit()">
+        <mat-icon>cancel</mat-icon>
+        <span>Cancel</span>
+      </button>
+    </div>
 
     </form>
   </mat-card-content>
