--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,11 +1,11 @@
 <mat-drawer-container class="example-container">
-
   <!-- Sidebar -->
-   <!-- opened *ngIf="isLoggedIn && showSideNav" -->
   <mat-drawer mode="side" [opened]="isLoggedIn && showSideNav" [disableClose]="true">
-    <mat-toolbar color="primary">
-      <span class="system-title">Livestock <br> Health Monitoring</span>
+    <mat-toolbar color="primary" class="sidebar-toolbar">
+      <img src="assets/images/logo.png" alt="System Logo" class="sidebar-logo">
     </mat-toolbar>
+
+
     <mat-list role="list">
       <app-nav [disabled]="isLoading" [menuItems]="filteredMenuItems"></app-nav>
     </mat-list>
@@ -13,7 +13,6 @@
 
   <!-- Main content -->
   <mat-drawer-content>
-
     <!-- Top Navigation Bar -->
     <mat-toolbar color="primary" class="top-nav" *ngIf="showTopNav && showSideNav">
       <span class="dashboard-title">
@@ -31,23 +30,11 @@
       </button>
 
       <mat-menu #userMenu="matMenu" class="user-menu">
-        <!-- Header Section -->
         <div class="menu-header">
-          <div class="menu-avatar">
-             <!-- to display -->
-            <!-- <mat-icon>account_circle</mat-icon> -->
-             <!-- {{ user.firstname }} -->
-          </div>
-          <div class="menu-info">
-            <!-- to display -->
-            <!-- <span class="menu-name">Juan Dela Cruz</span> -->
-            <!-- <span class="menu-role">Administrator</span> -->
-          </div>
+          <div class="menu-avatar"></div>
+          <div class="menu-info"></div>
         </div>
 
-        <!-- <mat-divider></mat-divider> -->
-
-        <!-- Menu Items -->
         <button mat-menu-item (click)="goToUserSettings()">
           <mat-icon>settings</mat-icon>
           <span>My Account</span>
@@ -58,14 +45,11 @@
           <span>Logout</span>
         </button>
       </mat-menu>
-
     </mat-toolbar>
 
     <!-- Page Content -->
     <div class="main-content">
       <router-outlet></router-outlet>
     </div>
-
   </mat-drawer-content>
-
 </mat-drawer-container>
