--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -9,7 +9,8 @@
 html {
   @include mat.theme((
     color: (
-      primary: mat.$azure-palette,
+      primary: mat.$green-palette,
+      // primary: mat.$azure-palette,
       tertiary: mat.$blue-palette,
     ),
     typography: Roboto,
