--- a/src/app/schedule/schedule-update/schedule-update.html
+++ b/src/app/schedule/schedule-update/schedule-update.html
@@ -1,1 +1,5 @@
-<p>schedule-update works!</p>
+<app-schedule-form
+  [isLoading]="isLoading"
+  [initDoc]="initDoc"
+  (onSubmitEvent)="onSubmit($event)">
+</app-schedule-form>
