--- a/src/app/schedule/schedule-create/schedule-create.html
+++ b/src/app/schedule/schedule-create/schedule-create.html
@@ -1,1 +1,5 @@
-<p>schedule-create works!</p>
+<app-schedule-form
+  [isLoading]="isLoading"
+  [initDoc]="initDoc"
+  (onSubmitEvent)="onSubmit($event)">
+</app-schedule-form>
