--- a/src/app/schedule/schedule-list/schedule-list.html
+++ b/src/app/schedule/schedule-list/schedule-list.html
@@ -1,1 +1,28 @@
-<p>schedule-list works!</p>
+<app-generic-table
+  [title]="'Schedule'"
+  [createButtonLabel]="'Create Schedule'"
+  [canCreate]="canCreate"
+  [displayedColumns]="displayedColumns"
+  [columnDefs]="columnDefs"
+  [dataSource]="dataSource"
+  [isLoading]="isLoading"
+  (create)="onCreate()"
+  (details)="onDetails($event)"
+  (update)="onUpdate($event)">
+
+   <ng-template #actions let-element>
+    <button mat-icon-button color="accent" (click)="onDetails(element._id!)">
+      <mat-icon>visibility</mat-icon>
+    </button>
+    <button
+      mat-icon-button
+      color="primary"
+      (click)="onUpdate(element._id!)"
+      *ngIf="user?.role === 'technician'"
+      [disabled]="element.status === 'pending' || element.status === 'approved'"
+    >
+      <mat-icon>edit</mat-icon>
+    </button>
+  </ng-template>
+
+</app-generic-table>
