--- a/src/app/health-record/health-record-list/health-record-list.html
+++ b/src/app/health-record/health-record-list/health-record-list.html
@@ -19,7 +19,10 @@
       mat-icon-button
       color="primary"
       (click)="onUpdate(element._id!)"
-      [disabled]="['pending', 'declined'].includes(element.scheduleStatus) || user?.role === 'farmer'"
+      [disabled]="
+        ['pending', 'declined', 'completed'].includes(element.scheduleStatus)
+        || user?.role === 'farmer'
+      "
     >
       <mat-icon>edit</mat-icon>
     </button>
