--- a/src/app/schedule/schedule-list/schedule-list.html
+++ b/src/app/schedule/schedule-list/schedule-list.html
@@ -19,7 +19,7 @@
       color="primary"
       (click)="onUpdate(element._id!)"
       *ngIf="user?.role === 'technician'"
-      [disabled]="element.status === 'pending' || element.status === 'approved'"
+      [disabled]="['pending', 'approved', 'completed', 'declined' ].includes(element.status)"
     >
       <mat-icon>edit</mat-icon>
     </button>
